crates/core/talkbank-parser-tests/src/snapshots/talkbank_parser_tests__snapshot__compound-german.snap
---
source: rust/crates/talkbank-parser-tests/src/snapshot.rs
expression: snapshot
---
{
  "lines": [
    {
      "header": {
        "type": "utf8"
      },
      "line_type": "header"
    },
    {
      "header": {
        "type": "begin"
      },
      "line_type": "header"
    },
    {
      "header": {
        "codes": [
          "deu"
        ],
        "type": "languages"
      },
      "line_type": "header"
    },
    {
      "header": {
        "entries": [
          {
            "name": null,
            "role": "Child",
            "speaker_code": "CHI"
          },
          {
            "name": null,
            "role": "Mother",
            "speaker_code": "MOT"
          }
        ],
        "type": "participants"
      },
      "line_type": "header"
    },
    {
      "header": {
        "age": "1;08.",
        "corpus": "bates",
        "group": "normal",
        "language": "deu",
        "role": "Child",
        "sex": "female",
        "speaker": "CHI",
        "type": "id"
      },
      "line_type": "header"
    },
    {
      "header": {
        "corpus": "bates",
        "language": "deu",
        "role": "Mother",
        "speaker": "MOT",
        "type": "id"
      },
      "line_type": "header"
    },
    {
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "content": [
                {
                  "content": "wirklich",
                  "type": "text"
                }
              ],
              "raw_text": "wirklich",
              "span": {
                "end": 162,
                "start": 154
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "bin",
                  "type": "text"
                }
              ],
              "raw_text": "bin",
              "span": {
                "end": 166,
                "start": 163
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "ich",
                  "type": "text"
                }
              ],
              "raw_text": "ich",
              "span": {
                "end": 170,
                "start": 167
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "ein",
                  "type": "text"
                }
              ],
              "raw_text": "ein",
              "span": {
                "end": 174,
                "start": 171
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "Grammatik",
                  "type": "text"
                },
                {
                  "content": {
                    "span": {
                      "end": 185,
                      "start": 184
                    }
                  },
                  "type": "compound_marker"
                },
                {
                  "content": "Nazi",
                  "type": "text"
                }
              ],
              "raw_text": "Grammatik+Nazi",
              "span": {
                "end": 189,
                "start": 175
              },
              "type": "word"
            }
          ],
          "terminator": {
            "type": "exclamation"
          }
        },
        "speaker": "CHI"
      }
    },
    {
      "header": {
        "type": "end"
      },
      "line_type": "header"
    }
  ],
  "participants": {
    "CHI": {
      "birth_date": null,
      "code": "CHI",
      "id": {
        "age": "1;08.",
        "corpus": "bates",
        "group": "normal",
        "language": "deu",
        "role": "Child",
        "sex": "female",
        "speaker": "CHI"
      },
      "name": null,
      "role": "Child"
    },
    "MOT": {
      "birth_date": null,
      "code": "MOT",
      "id": {
        "corpus": "bates",
        "language": "deu",
        "role": "Mother",
        "speaker": "MOT"
      },
      "name": null,
      "role": "Mother"
    }
  }
}
