crates/core/talkbank-parser-tests/src/snapshots/talkbank_parser_tests__snapshot__compound-morpheme-plural.snap
---
source: crates/talkbank-parser-tests/src/snapshot.rs
expression: snapshot
---
{
  "lines": [
    {
      "header": {
        "type": "utf8"
      },
      "line_type": "header"
    },
    {
      "header": {
        "type": "begin"
      },
      "line_type": "header"
    },
    {
      "header": {
        "codes": [
          "eng"
        ],
        "type": "languages"
      },
      "line_type": "header"
    },
    {
      "header": {
        "entries": [
          {
            "name": null,
            "role": "Child",
            "speaker_code": "CHI"
          },
          {
            "name": null,
            "role": "Mother",
            "speaker_code": "MOT"
          }
        ],
        "type": "participants"
      },
      "line_type": "header"
    },
    {
      "header": {
        "age": "1;08.",
        "corpus": "test",
        "group": "normal",
        "language": "eng",
        "role": "Child",
        "sex": "female",
        "speaker": "CHI",
        "type": "id"
      },
      "line_type": "header"
    },
    {
      "header": {
        "corpus": "test",
        "language": "eng",
        "role": "Mother",
        "speaker": "MOT",
        "type": "id"
      },
      "line_type": "header"
    },
    {
      "dependent_tiers": [
        {
          "data": {
            "items": [
              {
                "main": {
                  "features": [
                    "Prs",
                    "Nom",
                    "S1"
                  ],
                  "lemma": "I",
                  "pos": "pron"
                }
              },
              {
                "main": {
                  "features": [
                    "Fin",
                    "Ind",
                    "Pres",
                    "S1"
                  ],
                  "lemma": "see",
                  "pos": "verb"
                }
              },
              {
                "main": {
                  "features": [
                    "Def",
                    "Art"
                  ],
                  "lemma": "the",
                  "pos": "det"
                }
              },
              {
                "main": {
                  "features": [
                    "Plur",
                    "Acc"
                  ],
                  "lemma": "blackbird",
                  "pos": "noun"
                }
              },
              {
                "main": {
                  "lemma": "and",
                  "pos": "cconj"
                }
              },
              {
                "main": {
                  "features": [
                    "Def",
                    "Art"
                  ],
                  "lemma": "the",
                  "pos": "det"
                }
              },
              {
                "main": {
                  "features": [
                    "Plur"
                  ],
                  "lemma": "butterfly",
                  "pos": "noun"
                }
              }
            ],
            "terminator": ".",
            "tier_type": "Mor"
          },
          "type": "Mor"
        },
        {
          "data": {
            "relations": [
              {
                "head": 2,
                "index": 1,
                "relation": "NSUBJ"
              },
              {
                "head": 0,
                "index": 2,
                "relation": "ROOT"
              },
              {
                "head": 4,
                "index": 3,
                "relation": "DET"
              },
              {
                "head": 2,
                "index": 4,
                "relation": "OBJ"
              },
              {
                "head": 7,
                "index": 5,
                "relation": "CC"
              },
              {
                "head": 7,
                "index": 6,
                "relation": "DET"
              },
              {
                "head": 4,
                "index": 7,
                "relation": "CONJ"
              },
              {
                "head": 2,
                "index": 8,
                "relation": "PUNCT"
              }
            ],
            "tier_type": "Gra"
          },
          "type": "Gra"
        }
      ],
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "content": [
                {
                  "content": "I",
                  "type": "text"
                }
              ],
              "raw_text": "I",
              "span": {
                "end": 153,
                "start": 152
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "see",
                  "type": "text"
                }
              ],
              "raw_text": "see",
              "span": {
                "end": 157,
                "start": 154
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "the",
                  "type": "text"
                }
              ],
              "raw_text": "the",
              "span": {
                "end": 161,
                "start": 158
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "blackbirds",
                  "type": "text"
                }
              ],
              "raw_text": "blackbirds",
              "span": {
                "end": 172,
                "start": 162
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "and",
                  "type": "text"
                }
              ],
              "raw_text": "and",
              "span": {
                "end": 176,
                "start": 173
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "the",
                  "type": "text"
                }
              ],
              "raw_text": "the",
              "span": {
                "end": 180,
                "start": 177
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "butterflies",
                  "type": "text"
                }
              ],
              "raw_text": "butterflies",
              "span": {
                "end": 192,
                "start": 181
              },
              "type": "word"
            }
          ],
          "terminator": {
            "type": "period"
          }
        },
        "speaker": "CHI"
      }
    },
    {
      "header": {
        "type": "end"
      },
      "line_type": "header"
    }
  ],
  "participants": {
    "CHI": {
      "birth_date": null,
      "code": "CHI",
      "id": {
        "age": "1;08.",
        "corpus": "test",
        "group": "normal",
        "language": "eng",
        "role": "Child",
        "sex": "female",
        "speaker": "CHI"
      },
      "name": null,
      "role": "Child"
    },
    "MOT": {
      "birth_date": null,
      "code": "MOT",
      "id": {
        "corpus": "test",
        "language": "eng",
        "role": "Mother",
        "speaker": "MOT"
      },
      "name": null,
      "role": "Mother"
    }
  }
}
